--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
+  "private":"true",
   "exports": {
     ".": {
       "types": "./lib/typescript/src/index.d.ts",
